2015-03-27  Tobias Burnus  <burnus@net-b.de>

	PR c/65586
	* g++.dg/gomp/openmp-simd-3.C: New.
	* gcc.dg/gomp/openmp-simd-3.c: New.

2015-03-27  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/65248
	* gcc.target/i386/pr65248-1.c: New file.
	* gcc.target/i386/pr65248-2.c: Likewise.
	* gcc.target/i386/pr65248-3.c: Likewise.
	* gcc.target/i386/pr65248-4.c: Likewise.

2015-03-27  Jakub Jelinek  <jakub@redhat.com>

	PR target/65593
	* gcc.c-torture/compile/pr65593.c: New test.

2015-03-27  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/59329
	* g++.dg/cpp1y/constexpr-assert1.C: New.

2015-03-27  Marek Polacek  <polacek@redhat.com>

	PR c++/65556
	* c-c++-common/pr65556.c: New test.

2015-03-27  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/65600
	* g++.dg/torture/pr65600.C: New testcase.

2015-03-27  Vladimir Makarov  <vmakarov@redhat.com>

	PR target/65407
	* gcc.target/i386/avx512f-kandnw-1.c: Add scanning kmovw.

2015-03-27  Andre Vehreschild  <vehre@gmx.de>

	* gfortran.dg/unlimited_polymorphic_24.f03: Added copyright
	statement and cleanup. Fixed typos.

2015-03-26  Jan Hubicka  <hubicka@ucw.cz>

	PR middle-end/65595
	* gcc.c-torture/compile/pr65595.c: New testcase.

2015-03-27  Marek Polacek  <polacek@redhat.com>

	PR sanitizer/65583
	* g++.dg/ubsan/pr65583.C: New test.

2015-03-26  Jan Hubicka  <hubicka@ucw.cz>

	* gcc.c-torture/compile/20150327.c: New testcase.

2015-03-26  Richard Biener  <rguenther@suse.de>

	PR middle-end/65555
	* g++.dg/torture/pr65555.C: New testcase.

2015-03-26  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/64715
	* gcc.dg/builtin-object-size-15.c: New test.
	* gcc.dg/pr64715-1.c: New test.
	* gcc.dg/pr64715-2.c: New test.

2015-03-26  Richard Biener  <rguenther@suse.de>

	PR middle-end/65519
	* gnat.dg/specs/opt2.ads: Fix testcase.

2015-03-25  Martin Sebor  <msebor@redhat.com>

	PR testsuite/65526
	* lib/target-supports.exp (check_effective_target_arm32): Fail early
	when target isn't arm*-*-*-*.